fix border radius on profile img on ie

--- a/app/styles/section/_profile.scss
+++ b/app/styles/section/_profile.scss
@@ -5,12 +5,9 @@
 	text-align: center;
 
 	&__image {
-		//float: top;
-		display: inline-block;
-		font-size: 160px !important;			
+		display: inline-block;			
 		border-radius: 50%;
 		width: 25%;
-		padding-right: 12px; 
 		height: auto;
 	}
 
